# Natural-Navigator

./: CMakeLists.txt  NaturalNavigator.pro  README  TODO  dynpid.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  natcontrol.py  shareddata.h  udp.recv.maxpat  usleep.h
display/: glwidget.cpp  glwidget.h
zcam/: zcamprocessing.cpp  zcamprocessing.h
